--- a/index.html
+++ b/index.html
@@ -5,23 +5,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title></title>
     <link rel="stylesheet" href="css/styles.css">
-    <!-- <script src="node_modules/jquery/dist/jquery.min.js"></script> -->
+    <script src="js/jquery-3.2.0.min.js" defer></script>
     <script type="text/javascript" src="js/app.js" defer></script>
     <link href="https://fonts.googleapis.com/css?family=Damion" rel="stylesheet">
   </head>
   <body>
 
     <header>
-      <h1>Sweet</h1>
-      <div class="down_arrow">
-        <span></span>
-        <span></span>
-      </div>
+      <h1>Sweet!</h1>
+      <div class="down_arrow"><span></span><span></span></div>
     </header>
 
     <main>
-      <section class="section-first">
-
+      <section class="section_first">
+        <h2 id="s_f_header">Tiramisu jelly</h2>
+        <p id="s_f_paragraph">Tiramisu jelly apple pie toffee gummies lemon drops muffin icing.
+          Cake sweet pudding gingerbread sesame snaps dessert pie.
+          Halvah marshmallow wafer tootsie roll fruitcake wafer apple pie.
+          Cookie fruitcake cotton candy.
+          <br><br>
+          Cupcake bear claw jujubes bonbon jelly-o candy canes.
+          Cheesecake liquorice muffin chocolate cake macaroon sesame snaps muffin sweet roll.
+          Carrot cake cotton candy candy dessert candy canes.
+          Chupa chups tootsie roll oat cake toffee jelly sweet marzipan.
+        </p>
       </section>
 
     </main>
