Started making elements of first section land

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title></title>
     <link rel="stylesheet" href="css/styles.css">
+    <link href="https://fonts.googleapis.com/css?family=Damion" rel="stylesheet">
     <script src="js/jquery-3.2.0.min.js" defer></script>
     <script type="text/javascript" src="js/app.js" defer></script>
-    <link href="https://fonts.googleapis.com/css?family=Damion" rel="stylesheet">
   </head>
   <body>
 
@@ -17,19 +17,28 @@
     </header>
 
     <main>
+
       <section class="section_first">
-        <h2 id="s_f_header">Tiramisu jelly</h2>
-        <p id="s_f_paragraph">Tiramisu jelly apple pie toffee gummies lemon drops muffin icing.
-          Cake sweet pudding gingerbread sesame snaps dessert pie.
-          Halvah marshmallow wafer tootsie roll fruitcake wafer apple pie.
-          Cookie fruitcake cotton candy.
-          <br><br>
-          Cupcake bear claw jujubes bonbon jelly-o candy canes.
-          Cheesecake liquorice muffin chocolate cake macaroon sesame snaps muffin sweet roll.
-          Carrot cake cotton candy candy dessert candy canes.
-          Chupa chups tootsie roll oat cake toffee jelly sweet marzipan.
-        </p>
+        <h2 class="sf_header">Tiramisu jelly</h2>
+        <div class="sf_container">
+          <div class="sf_pic">
+          </div>
+          <div class="sf_paragraph">
+            <p>Tiramisu jelly apple pie toffee gummies lemon drops muffin icing.
+              Cake sweet pudding gingerbread sesame snaps dessert pie.
+              Halvah marshmallow wafer tootsie roll fruitcake wafer apple pie.
+              Cookie fruitcake cotton candy.
+              <br><br>
+              Cupcake bear claw jujubes bonbon jelly-o candy canes.
+              Cheesecake liquorice muffin chocolate cake macaroon sesame snaps muffin sweet roll.
+              Carrot cake cotton candy candy dessert candy canes.
+              Chupa chups tootsie roll oat cake toffee jelly sweet marzipan.
+            </p>
+          </div>
+        </div>
       </section>
+
+
 
     </main>
 
