Section 1 probably done

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
       <section class="section_first">
         <h2 class="sf_header">Tiramisu jelly</h2>
         <div class="sf_container">
-          <div class="sf_pic">
-          </div>
-          <div class="sf_paragraph">
+          <img class="sf_pic" src="img/cupCakes.jpg" alt="cupcakes">
+          <div class="sf_textblock">
+            <h2>cotton candy</h2>
             <p>Tiramisu jelly apple pie toffee gummies lemon drops muffin icing.
               Cake sweet pudding gingerbread sesame snaps dessert pie.
               Halvah marshmallow wafer tootsie roll fruitcake wafer apple pie.
@@ -33,6 +33,11 @@
               Cheesecake liquorice muffin chocolate cake macaroon sesame snaps muffin sweet roll.
               Carrot cake cotton candy candy dessert candy canes.
               Chupa chups tootsie roll oat cake toffee jelly sweet marzipan.
+              <br><br>
+              Cake lemon drops chocolate bar.
+              Candy fruitcake croissant pastry cake biscuit cupcake.
+              Tootsie roll pastry tart bonbon sweet gummies jelly beans sweet.
+              Candy canes gummies cake tart ice cream apple pie.
             </p>
           </div>
         </div>
