Parallax almost done

--- a/index.html
+++ b/index.html
@@ -43,6 +43,21 @@
         </div>
       </section>
 
+      <section class="section_parallax">
+        <div class="prlx1"></div>
+        <div class="prlx2"></div>
+        <div class="prlx3"></div>
+        <div class="prlx4"></div>
+        <div class="prlx5"></div>
+        <div class="prlx6"></div>
+        <div class="prlx7"></div>
+        <div class="prlx8"></div>
+        <div class="prlx9"></div>
+      </section>
+
+      <section class="section_third">
+
+      </section>
 
 
     </main>
