parallax done, plus subtle changes to header and first section

--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@
         <div class="prlx7"></div>
         <div class="prlx8"></div>
         <div class="prlx9"></div>
+        <div class="prlx10"></div>
+        <div class="prlx11"></div>
       </section>
 
       <section class="section_third">
