section 3 almost finished

--- a/index.html
+++ b/index.html
@@ -58,14 +58,29 @@
       </section>
 
       <section class="section_third">
-
+        <h2 class="st_header">Marshmallow toffee apple pie!</h2>
+        <div class="st_container">
+          <div class="st_pic st_picdiv_inactive"><div></div></div>
+          <div class="st_pic st_picdiv_inactive"><div></div></div>
+          <div class="st_pic st_picdiv_inactive"><div></div></div>
+          <div class="st_pic st_picdiv_inactive"><div></div></div>
+          <div class="st_pic st_picdiv_inactive"><div></div></div>
+          <div class="st_pic st_picdiv_inactive"><div></div></div>
+        </div>
       </section>
 
 
     </main>
 
     <footer>
-
+      <!-- <p>blablablabla</p>
+      <p>blablablabla</p>
+      <p>blablablabla</p>
+      <p>blablablabla</p>
+      <p>blablablabla</p>
+      <p>blablablabla</p>
+      <p>blablablabla</p>
+      <p>blablablabla</p> -->
     </footer>
   </body>
 </html>
