--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title></title>
     <link rel="stylesheet" href="css/styles.css">
     <link href="https://fonts.googleapis.com/css?family=Damion" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Handlee" rel="stylesheet">
     <script src="js/jquery-3.2.0.min.js" defer></script>
     <script type="text/javascript" src="js/app.js" defer></script>
   </head>
@@ -21,7 +22,9 @@
       <section class="section_first">
         <h2 class="sf_header">Tiramisu jelly</h2>
         <div class="sf_container">
-          <img class="sf_pic" src="img/cupCakes.jpg" alt="cupcakes">
+          <div class="sf_pic_container">
+            <img class="sf_pic" src="img/cupCakes.jpg" alt="cupcakes">
+          </div>
           <div class="sf_textblock">
             <h2>cotton candy</h2>
             <p>Tiramisu jelly apple pie toffee gummies lemon drops muffin icing.
@@ -60,27 +63,16 @@
       <section class="section_third">
         <h2 class="st_header">Marshmallow toffee apple pie!</h2>
         <div class="st_container">
-          <div class="st_pic st_picdiv_inactive"><div></div></div>
-          <div class="st_pic st_picdiv_inactive"><div></div></div>
-          <div class="st_pic st_picdiv_inactive"><div></div></div>
-          <div class="st_pic st_picdiv_inactive"><div></div></div>
-          <div class="st_pic st_picdiv_inactive"><div></div></div>
-          <div class="st_pic st_picdiv_inactive"><div></div></div>
+          <div class="st_pic st_picdiv_inactive"><div><h1>candy</h1></div></div>
+          <div class="st_pic st_picdiv_inactive"><div><h1>cupcake</h1></div></div>
+          <div class="st_pic st_picdiv_inactive"><div><h1>soufflé</h1></div></div>
+          <div class="st_pic st_picdiv_inactive"><div><h1>muffin</h1></div></div>
+          <div class="st_pic st_picdiv_inactive"><div><h1>lollipop</h1></div></div>
+          <div class="st_pic st_picdiv_inactive"><div><h1>fruitcake</h1></div></div>
         </div>
       </section>
 
-
     </main>
 
-    <footer>
-      <!-- <p>blablablabla</p>
-      <p>blablablabla</p>
-      <p>blablablabla</p>
-      <p>blablablabla</p>
-      <p>blablablabla</p>
-      <p>blablablabla</p>
-      <p>blablablabla</p>
-      <p>blablablabla</p> -->
-    </footer>
   </body>
 </html>
